<resources>
    <string name="app_name">Байки из склепа</string>
    <string name="info_read">ЧИТАТЬ</string>
    <string name="info_read_end">ЧИТАТЬ ЕЩЕ РАЗ</string>
    <string name="info_next">ДАЛЕЕ</string>
    <string name="info_map">ПРОГРЕСС</string>
    <string name="info_hedear">Это художественное\nпроизведение.</string>
    <string name="info_center">Все\nперсонажи вымешленные.\nВсе\nсовпадения случайны.</string>

    <string name="font_georgia">fonts/georgiai.ttf</string>

    <string name="ok">OK</string>
    <string name="permission_storage_rationale">Storage permission is needed to show the camera preview.</string>
    <string name="permision_available_storage">Storage Permission has been granted. Preview can now be opened.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>

    <string name="login">ВОЙТИ</string>
    <string name="singup">ЗАРЕГИСТРИРОВАТСЯ</string>
    <string name="singup_activ">РЕГИСТРАЦИЯ</string>
    <string name="singup_exsit">уже есть аккаунт</string>

    <string name="avtorstvo">Подать заявку на авторство?</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="yes">ДА</string>
    <string name="yesNewAutor">Заявка отправлена. Скоро с вами свяжутся.</string>

    <string name="raiting_text">Оцените историю</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="google_accaunt">Войдите, используя аккаунт</string>
    <string name="loading">Загрузка…</string>
    <string name="server_client_id">959777552825-0o8mrvmcoorv1k1q0p0ms0651oi4aktc.apps.googleusercontent.com</string>

    <string name="action_profile">Профиль</string>

    <string name="action_push_off">Отключить уведомления</string>
    <string name="action_push_on">Включить уведомления</string>
    <string name="action_loguot">Выйти</string>

    <string name="no_internet">Отсутствует интернет подключение.\nПопробуйте в другой раз.</string>
    <string name="no_login">Вы не залогинелись</string>
    <string name="no_subscrition">Вы не оформили подписку.</string>
</resources>
