<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorCartRaiting"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avtorstvo"
        android:textColor="@color/colorPodpiska"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txtYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="50dp"
        android:text="@string/yes"
        android:textColor="@color/colorRed"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtYes"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@+id/txtYes"
        android:text="@string/cancel"
        android:textColor="@color/colorPodpiska"
        android:textSize="16dp" />
</RelativeLayout>