<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBacground"
    tools:context="com.wearesputnik.istoria.activity.SingupActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editEmail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="163dp"
        android:inputType="textEmailAddress"
        android:hint="Email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_below="@+id/editEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="Пароль" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editConfirmPassword"
        android:layout_below="@+id/editPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="Потверждение пароля" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singup_activ"
        android:id="@+id/btnSignUp"
        android:layout_below="@+id/editConfirmPassword"
        android:layout_alignStart="@+id/editConfirmPassword"
        android:layout_alignEnd="@+id/editConfirmPassword"
        android:background="@drawable/bg_buttom"
        android:textColor="@color/colorWite"
        android:textSize="22dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singup_exsit"
        android:id="@+id/textView10"
        android:layout_below="@+id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorGrey"
        android:textSize="16dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorRed"
        android:textSize="18dp"
        android:layout_marginTop="15dp" />

</RelativeLayout>
