<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wearesputnik.istoria.activity.InfoBookActivity"
    android:background="@color/colorBacground">

    <include layout="@layout/tollbar"
        android:id="@+id/toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageViewCoverInfo"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/null_foto_info"
        android:layout_alignParentBottom="false"
        android:layout_alignTop="@+id/relInfoScreen1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/gradient_baground"
        android:id="@+id/relGradient"></RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="18dp"
        android:text="@string/info_read"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:textColor="@color/design_textinput_error_color_light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/btnNext"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:id="@+id/relInfoScreen2">

        <com.wearesputnik.istoria.helpers.TextViewGeorgia
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_hedear"
            android:id="@+id/textView2"
            android:textStyle="italic"
            android:textSize="16dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="73dp"
            android:textAlignment="center"
            android:textColor="@color/background_floating_material_light" />

        <com.wearesputnik.istoria.helpers.TextViewGeorgia
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_center"
            android:id="@+id/textView3"
            android:textStyle="italic"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="16dp"
            android:textAlignment="center"
            android:textColor="@color/background_floating_material_light" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnNext"
        android:layout_marginBottom="10dp"
        android:id="@+id/relInfoScreen1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/txtDescription"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textSize="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/background_floating_material_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/txtAuthor"
            android:layout_marginBottom="9dp"
            android:textSize="16dp"
            android:textColor="@color/background_floating_material_light"
            android:layout_above="@+id/txtDescription"
            android:layout_alignStart="@+id/txtDescription" />

        <com.wearesputnik.istoria.helpers.TextViewGeorgia
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/txtName"
            android:textSize="18dp"
            android:textColor="@color/background_floating_material_light"
            android:layout_above="@+id/txtAuthor"
            android:layout_alignStart="@+id/txtAuthor"
            android:layout_marginBottom="8dp"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_alignTop="@+id/txtName"
            android:layout_alignBottom="@+id/txtAuthor">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@mipmap/eye"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="177"
                android:id="@+id/txtEve"
                android:textColor="@color/background_floating_material_light"
                android:textSize="16dp"
                android:layout_toLeftOf="@+id/imageView3"
                android:layout_marginRight="5dp"
                android:layout_marginTop="-5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@mipmap/ic_rating"
                android:layout_below="@+id/txtEve"
                android:layout_alignEnd="@+id/imageView3"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5.0"
                android:id="@+id/txtRaiting"
                android:layout_alignTop="@+id/imageView2"
                android:layout_toStartOf="@+id/imageView2"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorWite"
                android:textSize="16dp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
